# LiteLog4s21

./: CMakeLists.txt  README.md
include/: Logger.h  LoggerConfigurator.h  PatternLayout.h
include/parse/: FormattingInfo.h  LoggingEvent.h  PatternParser.h
include/parse/converters/: PatternConverter.h  PidPatternConverter.h
src/: CMakeLists.txt  LogManager.cc  Logger.cc  LoggerConfigurator.cc  LoggerInitializer.cc  PatternLayout.cc
src/parse/: FormattingInfo.cc  LoggingEvent.cc  PatternParser.cc
src/parse/converters/: ClassNamePatternConverter.cc  ColorEndPatternConverter.cc  ColorStartPatternConverter.cc  DatePatternConverter.cc  FileLocationPatternConverter.cc  FullLocationPatternConverter.cc  LevelPatternConverter.cc  LineLocationPatternConverter.cc  LineSeparatorPatternConverter.cc  LiteralPatternConverter.cc  LoggerPatternConverter.cc  MessagePatternConverter.cc  MethodLocationPatternConverter.cc  PatternConverter.cc  PidPatternConverter.cc  PropertiesPatternConverter.cc  RelativeTimePatternConverter.cc  ShortFileLocationPatternConverter.cc  ThreadPatternConverter.cc
test/: CMakeLists.txt  logger_test.cc  pattern_parser_test.cc  test.h
